--- a/forever-full-stack/backend/.env
+++ b/forever-full-stack/backend/.env
@@ -3,11 +3,12 @@ ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "greatstack123"
 
 
-CLOUDINARY_API_KEY = "612638854855371"
-CLOUDINARY_SECRET_KEY = "PnobP26a7xfDBIvndF0GHMAQRG0"
+CLOUDINARY_API_KEY = "648988979997173"
+CLOUDINARY_SECRET_KEY = "xGfdxau38BqaTjjzP9V_zL2KAE4"
 CLOUDINARY_NAME = "dzohktpwo"
 
-MONGODB_URI = "mongodb+srv://adyasha24:adyasha24@cluster0.hvfco.mongodb.net"
+MONGODB_URI = "mongodb+srv://adyasha24:adyasha24@cluster0.hvfco.mongodb.net/
+"
 STRIPE_SECRET_KEY = "-------- Paste Stripe Secret key --------"
 
 RAZORPAY_KEY_SECRET = '-------- Paste Razorpay Secret key --------'
